--- a/public/promotions.html
+++ b/public/promotions.html
@@ -502,285 +502,9 @@
                 </div>
             </div>
 
-            <h2 style="font-size: 1.75rem; font-weight: 700; color: #1e293b; margin-bottom: 1.5rem; display: flex; align-items: center; gap: 0.5rem;">
-                <i class="fas fa-gift" style="color: #667eea;"></i>
-                Promozioni in Evidenza
-            </h2>
-
-            <div class="promotions-grid" id="promotions-grid">
-                
-                <!-- Promotion Card 1 -->
-                <div class="promo-card" data-category="food">
-                    <div class="promo-image">
-                        <img src="https://images.unsplash.com/photo-1555939594-58d7cb561ad1?w=500" alt="Pizza">
-                        <div class="promo-badge">-50%</div>
-                        <button class="promo-favorite" aria-label="Aggiungi ai preferiti">
-                            <i class="far fa-heart"></i>
-                        </button>
-                    </div>
-                    <div class="promo-content">
-                        <div class="promo-header">
-                            <h3 class="promo-title">Pizza Margherita</h3>
-                            <div class="promo-category-badge">
-                                <i class="fas fa-utensils"></i>
-                            </div>
-                        </div>
-                        <p class="promo-description">Due pizze margherita al prezzo di una</p>
-                        <div class="promo-partner">
-                            <i class="fas fa-store"></i>
-                            <span>Pizzeria Da Mario</span>
-                        </div>
-                        <div class="promo-footer">
-                            <div class="promo-price">
-                                <span class="price-original">€20.00</span>
-                                <span class="price-final">€10.00</span>
-                            </div>
-                            <button class="btn-promo">
-                                <span>Riscatta</span>
-                                <i class="fas fa-arrow-right"></i>
-                            </button>
-                        </div>
-                        <div class="promo-meta">
-                            <span class="meta-item">
-                                <i class="fas fa-clock"></i>
-                                Scade tra 5 giorni
-                            </span>
-                            <span class="meta-item">
-                                <i class="fas fa-users"></i>
-                                234 riscatti
-                            </span>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Promotion Card 2 -->
-                <div class="promo-card" data-category="shopping">
-                    <div class="promo-image">
-                        <img src="https://images.unsplash.com/photo-1441984904996-e0b6ba687e04?w=500" alt="Shopping">
-                        <div class="promo-badge">-30%</div>
-                        <button class="promo-favorite" aria-label="Aggiungi ai preferiti">
-                            <i class="far fa-heart"></i>
-                        </button>
-                    </div>
-                    <div class="promo-content">
-                        <div class="promo-header">
-                            <h3 class="promo-title">Sconto Shopping</h3>
-                            <div class="promo-category-badge">
-                                <i class="fas fa-shopping-bag"></i>
-                            </div>
-                        </div>
-                        <p class="promo-description">30% su tutto l'abbigliamento</p>
-                        <div class="promo-partner">
-                            <i class="fas fa-store"></i>
-                            <span>Fashion Store</span>
-                        </div>
-                        <div class="promo-footer">
-                            <div class="promo-price">
-                                <span class="price-original">€100.00</span>
-                                <span class="price-final">€70.00</span>
-                            </div>
-                            <button class="btn-promo">
-                                <span>Riscatta</span>
-                                <i class="fas fa-arrow-right"></i>
-                            </button>
-                        </div>
-                        <div class="promo-meta">
-                            <span class="meta-item">
-                                <i class="fas fa-clock"></i>
-                                Scade tra 10 giorni
-                            </span>
-                            <span class="meta-item">
-                                <i class="fas fa-users"></i>
-                                156 riscatti
-                            </span>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Promotion Card 3 -->
-                <div class="promo-card" data-category="services">
-                    <div class="promo-image">
-                        <img src="https://images.unsplash.com/photo-1560066984-138dadb4c035?w=500" alt="Wellness">
-                        <div class="promo-badge">2x1</div>
-                        <button class="promo-favorite" aria-label="Aggiungi ai preferiti">
-                            <i class="far fa-heart"></i>
-                        </button>
-                    </div>
-                    <div class="promo-content">
-                        <div class="promo-header">
-                            <h3 class="promo-title">Massaggio Relax</h3>
-                            <div class="promo-category-badge">
-                                <i class="fas fa-spa"></i>
-                            </div>
-                        </div>
-                        <p class="promo-description">Due massaggi al prezzo di uno</p>
-                        <div class="promo-partner">
-                            <i class="fas fa-store"></i>
-                            <span>Spa Harmony</span>
-                        </div>
-                        <div class="promo-footer">
-                            <div class="promo-price">
-                                <span class="price-original">€120.00</span>
-                                <span class="price-final">€60.00</span>
-                            </div>
-                            <button class="btn-promo">
-                                <span>Riscatta</span>
-                                <i class="fas fa-arrow-right"></i>
-                            </button>
-                        </div>
-                        <div class="promo-meta">
-                            <span class="meta-item">
-                                <i class="fas fa-clock"></i>
-                                Scade tra 15 giorni
-                            </span>
-                            <span class="meta-item">
-                                <i class="fas fa-users"></i>
-                                89 riscatti
-                            </span>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Promotion Card 4 -->
-                <div class="promo-card" data-category="entertainment">
-                    <div class="promo-image">
-                        <img src="https://images.unsplash.com/photo-1489599849927-2ee91cede3ba?w=500" alt="Cinema">
-                        <div class="promo-badge">-40%</div>
-                        <button class="promo-favorite" aria-label="Aggiungi ai preferiti">
-                            <i class="far fa-heart"></i>
-                        </button>
-                    </div>
-                    <div class="promo-content">
-                        <div class="promo-header">
-                            <h3 class="promo-title">Cinema 2x1</h3>
-                            <div class="promo-category-badge">
-                                <i class="fas fa-film"></i>
-                            </div>
-                        </div>
-                        <p class="promo-description">Due biglietti cinema al prezzo di uno</p>
-                        <div class="promo-partner">
-                            <i class="fas fa-store"></i>
-                            <span>Cinema Multiplex</span>
-                        </div>
-                        <div class="promo-footer">
-                            <div class="promo-price">
-                                <span class="price-original">€18.00</span>
-                                <span class="price-final">€9.00</span>
-                            </div>
-                            <button class="btn-promo">
-                                <span>Riscatta</span>
-                                <i class="fas fa-arrow-right"></i>
-                            </button>
-                        </div>
-                        <div class="promo-meta">
-                            <span class="meta-item">
-                                <i class="fas fa-clock"></i>
-                                Scade tra 7 giorni
-                            </span>
-                            <span class="meta-item">
-                                <i class="fas fa-users"></i>
-                                312 riscatti
-                            </span>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Promotion Card 5 -->
-                <div class="promo-card" data-category="food">
-                    <div class="promo-image">
-                        <img src="https://images.unsplash.com/photo-1546069901-ba9599a7e63c?w=500" alt="Sushi">
-                        <div class="promo-badge">-25%</div>
-                        <button class="promo-favorite" aria-label="Aggiungi ai preferiti">
-                            <i class="far fa-heart"></i>
-                        </button>
-                    </div>
-                    <div class="promo-content">
-                        <div class="promo-header">
-                            <h3 class="promo-title">Menu Sushi</h3>
-                            <div class="promo-category-badge">
-                                <i class="fas fa-utensils"></i>
-                            </div>
-                        </div>
-                        <p class="promo-description">25% di sconto su menu completo</p>
-                        <div class="promo-partner">
-                            <i class="fas fa-store"></i>
-                            <span>Sushi Bar Zen</span>
-                        </div>
-                        <div class="promo-footer">
-                            <div class="promo-price">
-                                <span class="price-original">€40.00</span>
-                                <span class="price-final">€30.00</span>
-                            </div>
-                            <button class="btn-promo">
-                                <span>Riscatta</span>
-                                <i class="fas fa-arrow-right"></i>
-                            </button>
-                        </div>
-                        <div class="promo-meta">
-                            <span class="meta-item">
-                                <i class="fas fa-clock"></i>
-                                Scade tra 12 giorni
-                            </span>
-                            <span class="meta-item">
-                                <i class="fas fa-users"></i>
-                                178 riscatti
-                            </span>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Promotion Card 6 -->
-                <div class="promo-card" data-category="travel">
-                    <div class="promo-image">
-                        <img src="https://images.unsplash.com/photo-1488646953014-85cb44e25828?w=500" alt="Travel">
-                        <div class="promo-badge">GRATIS</div>
-                        <button class="promo-favorite" aria-label="Aggiungi ai preferiti">
-                            <i class="far fa-heart"></i>
-                        </button>
-                    </div>
-                    <div class="promo-content">
-                        <div class="promo-header">
-                            <h3 class="promo-title">Weekend Romantico</h3>
-                            <div class="promo-category-badge">
-                                <i class="fas fa-plane"></i>
-                            </div>
-                        </div>
-                        <p class="promo-description">Colazione inclusa gratis</p>
-                        <div class="promo-partner">
-                            <i class="fas fa-store"></i>
-                            <span>Hotel Paradise</span>
-                        </div>
-                        <div class="promo-footer">
-                            <div class="promo-price">
-                                <span class="price-original">€200.00</span>
-                                <span class="price-final">€150.00</span>
-                            </div>
-                            <button class="btn-promo">
-                                <span>Riscatta</span>
-                                <i class="fas fa-arrow-right"></i>
-                            </button>
-                        </div>
-                        <div class="promo-meta">
-                            <span class="meta-item">
-                                <i class="fas fa-clock"></i>
-                                Scade tra 20 giorni
-                            </span>
-                            <span class="meta-item">
-                                <i class="fas fa-users"></i>
-                                45 riscatti
-                            </span>
-                        </div>
-                    </div>
-                </div>
-
-            </div>
-
-            <!-- Load More -->
-            <div class="load-more-section">
-                <button class="btn-load-more">
-                    <span>Carica Altre Promozioni</span>
-                    <i class="fas fa-chevron-down"></i>
-                </button>
+            <!-- Empty section - all cards are now organization cards loaded from database -->
+            <div class="promotions-grid" id="promotions-grid" style="display: none;">
+                <!-- Reserved for future system promotions -->
             </div>
         </div>
     </section>
